--- a/client/src/components/topbar/topbar.css
+++ b/client/src/components/topbar/topbar.css
@@ -1,7 +1,6 @@
 .topbarContainer {
   height: 50px;
   width: 100%;
-  background-color: white;
   display: flex;
   align-items: center;
   position: sticky;
@@ -47,9 +46,12 @@
   outline: none;
 }
 
-.topbarRight {
+.topbarRightContainer {
   flex: 7;
-  width: 50%;
+}
+
+.topbarRight {
+  width: 60%;
   height: 40px;
   display: flex;
   align-items: center;
@@ -59,6 +61,8 @@
   border-radius: 30px;
   margin-top: 2%;
   margin-right: 10%;
+  margin-left: 10%;
+  background-color: white;
 }
 
 .topbarIcons {
@@ -66,7 +70,7 @@
 }
 
 .topbarIconItem {
-  margin-right: 15px;
+  margin-right: 35px;
   cursor: pointer;
   position: relative;
 }
