--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -1,115 +1,111 @@
-.sidebar{
-    flex: 5;
-    height: calc(100vh -50px);
+.sidebar {
+  flex: 5;
+  height: calc(100vh -50px);
 }
-.sidebarWrapper{
-    margin-top: 30px;
-    display: flex;
-    align-items: center;
-    margin-left: 3%;
+.sidebarWrapper {
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  margin-left: 3%;
 }
 .profilImg {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    margin-left: 45px;
-    object-fit: cover;
-    cursor: pointer;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  margin-left: 45px;
+  object-fit: cover;
+  cursor: pointer;
 }
 .nameUser {
-    font-size: 12px;
-    margin-left: 10px;
-    font-weight: 500;
+  font-size: 12px;
+  margin-left: 10px;
+  font-weight: 500;
 }
-.sidebarHr{
-    margin-left: 45px;
-    margin-right: 45px;
-    margin-top: 20px;
-    width: 50%;
+.sidebarHr {
+  margin-left: 45px;
+  margin-right: 45px;
+  margin-top: 20px;
+  width: 50%;
 }
-.friendsRequest{
-    margin-left: 45px;
-    margin-top: 17px;
-    font-size: 12px;
-    font-weight: 600;
-
+.friendsRequest {
+  margin-left: 45px;
+  margin-top: 17px;
+  font-size: 12px;
+  font-weight: 600;
 }
-.sidebarListRequests{
+.sidebarListRequests {
   list-style: none;
 }
-.sidebarRequest{
-    margin-top: 14px;
-  align-items: center; 
+.sidebarRequest {
+  margin-top: 14px;
+  align-items: center;
   width: 40%;
   background-color: rgb(243, 250, 249);
-  border:none; 
-    border-radius:15px ;
-
+  border: none;
+  border-radius: 15px;
 }
 .requestFriendImg {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    margin-left: 5px;
-    object-fit: cover;
-    cursor: pointer
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  margin-left: 5px;
+  object-fit: cover;
+  cursor: pointer;
 }
-.requestFriendName{
-    font-size: 12px;
-    margin-left: 10px;
-    font-weight: 450;
-    vertical-align: super
+.requestFriendName {
+  font-size: 12px;
+  margin-left: 10px;
+  font-weight: 450;
+  vertical-align: super;
 }
-.buttons{
-    display: flex;
-    margin-top: 8px;
+.buttons {
+  display: flex;
+  margin-top: 8px;
 }
-.confirmButton{ 
-    width: 80px;
-    color: #fff;
-    background-color: 
-    rgb(0, 231, 247);
-    font-size: 10px;
-    border:none; 
-    border-radius:5px ;
-    font-weight: normal;
-    cursor: pointer
+.confirmButton {
+  width: 80px;
+  color: #fff;
+  background-color: rgb(0, 231, 247);
+  font-size: 10px;
+  border: none;
+  border-radius: 5px;
+  font-weight: normal;
+  cursor: pointer;
 }
-.deleteButton{ 
-    width: 80px;
-    color:black;
-    background-color:  #def8f2;
-    font-size: 10px;
-    border:none; 
-    border-radius:5px ;
-    font-weight: normal;
-    cursor: pointer
+.deleteButton {
+  width: 80px;
+  color: black;
+  background-color: #def8f2;
+  font-size: 10px;
+  border: none;
+  border-radius: 5px;
+  font-weight: normal;
+  cursor: pointer;
 }
-.friends{
-    margin-left: 45px;
-    margin-top: 17px;
-    font-size: 12px;
-    font-weight: 600;
-
+.friends {
+  margin-left: 45px;
+  margin-top: 17px;
+  font-size: 12px;
+  font-weight: 600;
 }
-.sidebarListFriends{
+.sidebarListFriends {
   list-style: none;
 }
-.sidebarFriends{
-    margin-top: 14px;
-  align-items: center; 
+.sidebarFriends {
+  margin-top: 14px;
+  align-items: center;
 }
 .friendImg {
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    margin-left: 5px;
-    object-fit: cover;
-    cursor: pointer
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  margin-left: 5px;
+  object-fit: cover;
+  cursor: pointer;
 }
-.friendName{
-    font-size: 12px;
-    margin-left: 10px;
-    font-weight: 450;
-    vertical-align: super
+.friendName {
+  font-size: 12px;
+  margin-left: 10px;
+  font-weight: 450;
+  vertical-align: super;
 }
